# octopus

./: Cargo.toml  Dockerfile  LICENSE.txt  README.md
.github/workflows/: ci.yml
octopus_cli/: Cargo.toml
octopus_cli/src/: core.rs  main.rs  operations.rs  table.rs
octopus_cli/src/core/: matching.rs
octopus_common/: Cargo.toml
octopus_common/src/: lib.rs  tx.rs  types.rs
octopus_engine/: Cargo.toml
octopus_engine/src/: accounting.rs  engine.rs  errors.rs  lib.rs  trading_platform.rs
octopus_web/: Cargo.toml  thunder-collection_octopus web.json
octopus_web/src/: accounting.rs  core.rs  handlers.rs  main.rs  trading_platform.rs
octopus_web/src/core/: matching.rs
src/: accounting.rs  core.rs  errors.rs  main.rs  trading_platform.rs  tx.rs
src/core/: matching.rs  types.rs
