[package]
name = "octopus_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-table = "0.4.7"
octopus_common = { version = "*", path = "../octopus_common" }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
yansi = "0.5.1"
