[package]
name = "octopus_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octopus_common = { version = "*", path = "../octopus_common" }
log = "0.4.17"
pretty_env_logger = "0.5.0"
warp = "0.3.5"
tokio = { version = "1.28.1", features = ["full"] }
