[package]
name = "octopus-web"
version = "0.1.0"
edition = "2021"

[dependencies]
octopus-engine = { version = "0.1.0", path = "../octopus_engine" }
log = "0.4.17"
pretty_env_logger = "0.5.0"
warp = "0.3.5"
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
